# RCore

./: .gitignore  .gitmodules  AArch64Toolchain.cmake  CMakeLists.txt  README.md  build-cli.sh.in
cmake/: FindCriterion.cmake
librbp/: CMakeLists.txt
librbp/include/RCore/librbp/: block.h  message.h
librbp/include/RCore/librbp/internal/: crc.h
librbp/src/: crc.c  message.c
librbp/test/: CMakeLists.txt  test-block.c  test-message.cpp
librcore/: CMakeLists.txt
librcore/include/RCore/: ack_stack.h  callbacks.h  defaults.h  events.h  rcomm.h  sequence_stack.h  subscription-map.h  transmit_buffer.h  util.hpp
librcore/include/RCore/internal/: avr_kroundup.h  hashtable.h
librcore/src/: ack_stack.c  defaults.c  events.c  hashtable.c  rcomm.c  rcore.c  sequence_stack.c  subscription-map.c  transmit_buffer.c
librcore/test/: CMakeLists.txt  test-ack-stack.cpp  test-rcomm.c  test-rcomm.cpp  test-sequence-stack.cpp  test-subscription-map.c
librcp/: CMakeLists.txt
librcp/include/RCore/: .directory
librcp/include/RCore/librcp/: message.h
librcp/src/: message.c  types.c
librcp/test/: CMakeLists.txt  test-message.c  test-message.cpp
librsp/: CMakeLists.txt
librsp/include/RCore/librsp/: byte_swap.h  data.h  flags.h  litecomm.h  message_types.h  stream_message.h
librsp/src/: data.c  flags.c  litecomm.c  stream_message.c
librsp/test/: CMakeLists.txt  test-data.cpp  test-flags.cpp  test-litecomm.cpp  test-stream-message.c
test/: CMakeLists.txt
